# gcp-streamlit

./: .gitignore  README.md
.github/workflows/: github-actions.yml
streamlit/: Dockerfile  README.md  compose.yaml  home.py  pyproject.toml  requirements.txt
streamlit/pages/: linedraw.py
streamlit/src/: gemini.py  opencv.py  tmp.py  utils.py
streamlit/thema/: config.yaml
terraform/module/cloud_run/: main.tf  output.tf  variable.tf
terraform/module/workload_identity/: main.tf  output.tf  variable.tf
terraform/prod/: main.tf
terraform/resource/: .terraform.lock.hcl  main.tf
