[project]
name = "gcp-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.12.1",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.44.1",
    "streamlit-image-select>=0.6.0",
]
